--- a/css/light-box.css
+++ b/css/light-box.css
@@ -58,7 +58,7 @@ body.lb-disable-scrolling {
 
   /* Background color behind image.
      This is visible during transitions. */
-  background-color: black;
+  background-color: white;
 }
 
 .lb-outerContainer:after {
